Nuevo cambio desde el EJS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
     <title>Intengo</title>
 </head>
 <body>
-    <h1>Este es un intento</h1>
+    <h1>Este es un intento desde EJS</h1>
 </body>
 </html>
