Se agregaron los archivos necesarios para insertar un usuario, se implemento el inicio de sesion PERO hacen falta todas las validaciones y los diseños correspondientes para cada pagina html (Todo el codigo esta documentado menos los archivos ejs)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,5 +16,6 @@
         <input type="password" name="contraseña" id="contraseña"> <br>
         <input type="submit" value="Enviar">
     </form>
+    <p>No te has regitrado? <a href="/registroUsuario">Resistrate</a></p>
 </body>
 </html>
